@@ -3,6 +3,7 @@
   <imports>
      <specific>javax.sql.DataSource</specific>
      <specific>com.mchange.v2.c3p0.cfg.C3P0Config</specific>
+     <specific>com.mchange.v2.c3p0.cfg.Validators</specific>
   </imports>
   <modifiers>
      <modifier>public</modifier>
@@ -149,7 +150,7 @@
        <type>String</type>
        <name>contextClassLoaderSource</name>
        <constrained/>
-       <default-value>C3P0Config.initializeStringPropertyVar("contextClassLoaderSource", C3P0Defaults.contextClassLoaderSource())</default-value>
+       <default-value>C3P0Config.initializeStringPropertyVar("contextClassLoaderSource", C3P0Defaults.contextClassLoaderSource(), Validators.ContextClassLoaderSource)</default-value>
        <getter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></getter>
        <setter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></setter>
     </property>
@@ -177,7 +178,7 @@
     <property>
        <type>String</type>
        <name>markSessionBoundaries</name>
-       <default-value>C3P0Config.initializeStringPropertyVar("markSessionBoundaries", C3P0Defaults.markSessionBoundaries())</default-value>
+       <default-value>C3P0Config.initializeStringPropertyVar("markSessionBoundaries", C3P0Defaults.markSessionBoundaries(), Validators.MarkSessionBoundaries)</default-value>
        <constrained/>
        <getter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></getter>
        <setter><modifiers><modifier>public</modifier><modifier>synchronized</modifier></modifiers></setter>
